// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Workflow Snapshots > GitHub Actions > should generate consistent workflow for backend-full 1`] = `
"# Workflow de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myapi
# Target: backend-full

name: Deploy to Production

on:
  push:
    branches:
      - production

env:
  PROJECT_NAME: myapi
  DOMAIN: api.example.com
  IMAGE_NAME: ghcr.io/\${{ github.repository }}/myapi

jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    timeout-minutes: 10
    
    steps:
      - name: Checkout code
        uses: actions/checkout@v4

      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3

      - name: Log in to GitHub Container Registry
        uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ secrets.DOCKER_REGISTRY_USER }}
          password: \${{ secrets.DOCKER_REGISTRY_TOKEN }}

      - name: Build and push Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          push: true
          tags: |
            \${{ env.IMAGE_NAME }}:\${GITHUB_SHA:0:7}
            \${{ env.IMAGE_NAME }}:latest
          cache-from: type=registry,ref=\${{ env.IMAGE_NAME }}:latest
          cache-to: type=inline

      - name: Deploy to server
        env:
          SSH_HOST: \${{ secrets.SSH_HOST }}
          SSH_USER: \${{ secrets.SSH_USER }}
          SSH_PRIVATE_KEY: \${{ secrets.SSH_PRIVATE_KEY }}
          SSH_KNOWN_HOSTS: \${{ secrets.SSH_KNOWN_HOSTS }}
          IMAGE_TAG: \${GITHUB_SHA:0:7}
        run: |
          # Configurar SSH con host key verification
          echo "$SSH_PRIVATE_KEY" > deploy_key
          chmod 600 deploy_key
          
          mkdir -p ~/.ssh
          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
          chmod 644 ~/.ssh/known_hosts
          
          # Deploy al servidor (IMAGE_TAG ya está en env)
          ssh -o StrictHostKeyChecking=yes -i deploy_key $SSH_USER@$SSH_HOST << ENDSSH
            set -e
            
            cd /var/www/myapi
            
            # Leer estado del servidor para obtener tag anterior para rollback
            STATE_FILE="/etc/fractal/state.json"
            PREVIOUS_TAG=""
            if [ -f "$STATE_FILE" ]; then
              # Usar jq si está disponible, sino python con json.load (robusto contra pretty-print)
              if command -v jq &> /dev/null; then
                PREVIOUS_TAG=$(sudo cat $STATE_FILE | jq -r '.lastSuccessfulImageTag // ""')
              else
                PREVIOUS_TAG=$(sudo cat $STATE_FILE | python3 -c "import sys, json; print(json.load(sys.stdin).get('lastSuccessfulImageTag', ''))")
              fi
              echo "Previous successful tag: $PREVIOUS_TAG"
            fi
            
            # Actualizar compose con nueva imagen
            export IMAGE_TAG=$IMAGE_TAG
            docker compose pull
            docker compose up -d --no-build
            
            # Esperar que los contenedores estén listos
            sleep 10
            
            # Ejecutar migraciones
            docker compose exec -T app php artisan migrate --force
            
            # Limpiar caches
            docker compose exec -T app php artisan config:clear
            docker compose exec -T app php artisan route:clear
            docker compose exec -T app php artisan view:clear
            docker compose exec -T app php artisan cache:clear
            
            # Healthcheck
            HEALTH_URL="https://api.example.com/health"
            echo "Checking health at $HEALTH_URL"
            
            HEALTHCHECK_PASSED=false
            for i in {1..30}; do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Healthcheck passed"
                HEALTHCHECK_PASSED=true
                break
              fi
              echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
            
            # Registrar el deploy en el estado del servidor
            TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
            if [ "$HEALTHCHECK_PASSED" = true ]; then
              # Deploy exitoso - actualizar estado
              sudo mkdir -p $(dirname $STATE_FILE)
              if [ -f "$STATE_FILE" ]; then
                # Leer estado actual
                CURRENT_STATE=$(sudo cat $STATE_FILE)
              else
                # Crear estado inicial
                CURRENT_STATE='{"version":"1.0.0","createdAt":"'$TIMESTAMP'","provisioning":{},"deployHistory":[]}'
              fi
              
              # Agregar entrada al historial
              NEW_ENTRY='{"imageTag":"'$IMAGE_TAG'","timestamp":"'$TIMESTAMP'","healthcheck":"passed","commitSha":"'\${GITHUB_SHA}'","branch":"'\${GITHUB_REF_NAME}'"}'
              UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['currentImageTag'] = '$IMAGE_TAG'
state['lastSuccessfulImageTag'] = '$IMAGE_TAG'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
              echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
              echo "✓ Deploy state updated"
              exit 0
            else
              echo "✗ Healthcheck failed after 30 attempts"
              
              # Registrar deploy fallido en el estado
              if [ -f "$STATE_FILE" ]; then
                CURRENT_STATE=$(sudo cat $STATE_FILE)
                NEW_ENTRY='{"imageTag":"'$IMAGE_TAG'","timestamp":"'$TIMESTAMP'","healthcheck":"failed","commitSha":"'\${GITHUB_SHA}'","branch":"'\${GITHUB_REF_NAME}'"}'
                UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
                echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
              fi
              
              # Rollback a la imagen anterior (AC-10: usar tag versionado, no contenedor previo)
              if [ -n "$PREVIOUS_TAG" ]; then
                echo "Rolling back to previous successful tag: $PREVIOUS_TAG"
                export IMAGE_TAG=$PREVIOUS_TAG
                
                # Asegurar que la imagen anterior esté disponible
                docker compose pull || echo "⚠ Pull failed, using local image"
                
                docker compose up -d
                echo "✓ Rolled back to $PREVIOUS_TAG"
                
                # Post-rollback healthcheck
                echo "Verifying rollback with healthcheck..."
                sleep 5
                for i in {1..10}; do
                  HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
                  if [ "$HTTP_CODE" = "200" ]; then
                    echo "✓ Post-rollback healthcheck passed"
                    break
                  fi
                  echo "Post-rollback attempt $i/10: HTTP $HTTP_CODE, retrying..."
                  sleep 2
                done
              else
                echo "⚠ No previous successful tag found for rollback"
              fi
              
              exit 1
            fi
ENDSSH
          
          rm -f deploy_key

      - name: Notify deployment status
        if: always()
        run: |
          if [ \${{ job.status }} == 'success' ]; then
            echo "✓ Deploy exitoso a https://api.example.com"
          else
            echo "✗ Deploy falló, ver logs arriba"
          fi
"
`;

exports[`Workflow Snapshots > GitHub Actions > should generate consistent workflow for frontend-static 1`] = `
"# Workflow de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myweb
# Target: frontend-static

name: Deploy to Production

on:
  push:
    branches:
      - main

env:
  PROJECT_NAME: myweb
  DOMAIN: app.example.com
  IMAGE_NAME: ghcr.io/\${{ github.repository }}/myweb

jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    timeout-minutes: 10
    
    steps:
      - name: Checkout code
        uses: actions/checkout@v4

      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3

      - name: Log in to GitHub Container Registry
        uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ secrets.DOCKER_REGISTRY_USER }}
          password: \${{ secrets.DOCKER_REGISTRY_TOKEN }}

      - name: Build and push Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          push: true
          tags: |
            \${{ env.IMAGE_NAME }}:\${GITHUB_SHA:0:7}
            \${{ env.IMAGE_NAME }}:latest
          cache-from: type=registry,ref=\${{ env.IMAGE_NAME }}:latest
          cache-to: type=inline

      - name: Deploy to server
        env:
          SSH_HOST: \${{ secrets.SSH_HOST }}
          SSH_USER: \${{ secrets.SSH_USER }}
          SSH_PRIVATE_KEY: \${{ secrets.SSH_PRIVATE_KEY }}
          SSH_KNOWN_HOSTS: \${{ secrets.SSH_KNOWN_HOSTS }}
          IMAGE_TAG: \${GITHUB_SHA:0:7}
        run: |
          # Configurar SSH con host key verification
          echo "$SSH_PRIVATE_KEY" > deploy_key
          chmod 600 deploy_key
          
          mkdir -p ~/.ssh
          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
          chmod 644 ~/.ssh/known_hosts
          
          # Deploy al servidor (IMAGE_TAG ya está en env)
          ssh -o StrictHostKeyChecking=yes -i deploy_key $SSH_USER@$SSH_HOST << ENDSSH
            set -e
            
            cd /var/www/myweb
            
            # Leer estado del servidor para obtener tag anterior para rollback
            STATE_FILE="/etc/fractal/state.json"
            PREVIOUS_TAG=""
            if [ -f "$STATE_FILE" ]; then
              # Usar jq si está disponible, sino python con json.load (robusto contra pretty-print)
              if command -v jq &> /dev/null; then
                PREVIOUS_TAG=$(sudo cat $STATE_FILE | jq -r '.lastSuccessfulImageTag // ""')
              else
                PREVIOUS_TAG=$(sudo cat $STATE_FILE | python3 -c "import sys, json; print(json.load(sys.stdin).get('lastSuccessfulImageTag', ''))")
              fi
              echo "Previous successful tag: $PREVIOUS_TAG"
            fi
            
            # Actualizar compose con nueva imagen
            export IMAGE_TAG=$IMAGE_TAG
            docker compose pull
            docker compose up -d --no-build
            
            # Esperar que los contenedores estén listos
            sleep 10
            
            # Healthcheck
            HEALTH_URL="https://app.example.com/"
            echo "Checking health at $HEALTH_URL"
            
            HEALTHCHECK_PASSED=false
            for i in {1..30}; do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Healthcheck passed"
                HEALTHCHECK_PASSED=true
                break
              fi
              echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
            
            # Registrar el deploy en el estado del servidor
            TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
            if [ "$HEALTHCHECK_PASSED" = true ]; then
              # Deploy exitoso - actualizar estado
              sudo mkdir -p $(dirname $STATE_FILE)
              if [ -f "$STATE_FILE" ]; then
                # Leer estado actual
                CURRENT_STATE=$(sudo cat $STATE_FILE)
              else
                # Crear estado inicial
                CURRENT_STATE='{"version":"1.0.0","createdAt":"'$TIMESTAMP'","provisioning":{},"deployHistory":[]}'
              fi
              
              # Agregar entrada al historial
              NEW_ENTRY='{"imageTag":"'$IMAGE_TAG'","timestamp":"'$TIMESTAMP'","healthcheck":"passed","commitSha":"'\${GITHUB_SHA}'","branch":"'\${GITHUB_REF_NAME}'"}'
              UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['currentImageTag'] = '$IMAGE_TAG'
state['lastSuccessfulImageTag'] = '$IMAGE_TAG'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
              echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
              echo "✓ Deploy state updated"
              exit 0
            else
              echo "✗ Healthcheck failed after 30 attempts"
              
              # Registrar deploy fallido en el estado
              if [ -f "$STATE_FILE" ]; then
                CURRENT_STATE=$(sudo cat $STATE_FILE)
                NEW_ENTRY='{"imageTag":"'$IMAGE_TAG'","timestamp":"'$TIMESTAMP'","healthcheck":"failed","commitSha":"'\${GITHUB_SHA}'","branch":"'\${GITHUB_REF_NAME}'"}'
                UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
                echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
              fi
              
              # Rollback a la imagen anterior (AC-10: usar tag versionado, no contenedor previo)
              if [ -n "$PREVIOUS_TAG" ]; then
                echo "Rolling back to previous successful tag: $PREVIOUS_TAG"
                export IMAGE_TAG=$PREVIOUS_TAG
                
                # Asegurar que la imagen anterior esté disponible
                docker compose pull || echo "⚠ Pull failed, using local image"
                
                docker compose up -d
                echo "✓ Rolled back to $PREVIOUS_TAG"
                
                # Post-rollback healthcheck
                echo "Verifying rollback with healthcheck..."
                sleep 5
                for i in {1..10}; do
                  HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
                  if [ "$HTTP_CODE" = "200" ]; then
                    echo "✓ Post-rollback healthcheck passed"
                    break
                  fi
                  echo "Post-rollback attempt $i/10: HTTP $HTTP_CODE, retrying..."
                  sleep 2
                done
              else
                echo "⚠ No previous successful tag found for rollback"
              fi
              
              exit 1
            fi
ENDSSH
          
          rm -f deploy_key

      - name: Notify deployment status
        if: always()
        run: |
          if [ \${{ job.status }} == 'success' ]; then
            echo "✓ Deploy exitoso a https://app.example.com"
          else
            echo "✗ Deploy falló, ver logs arriba"
          fi
"
`;

exports[`Workflow Snapshots > GitHub Actions > should generate consistent workflow for multirepo api 1`] = `
"# Workflow de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myapi
# Target: backend-full

name: Deploy to Production

on:
  push:
    branches:
      - production

env:
  PROJECT_NAME: myapi
  DOMAIN: api.example.com
  IMAGE_NAME: ghcr.io/\${{ github.repository }}/myapi

jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    timeout-minutes: 10
    
    steps:
      - name: Checkout code
        uses: actions/checkout@v4

      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3

      - name: Log in to GitHub Container Registry
        uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ secrets.DOCKER_REGISTRY_USER }}
          password: \${{ secrets.DOCKER_REGISTRY_TOKEN }}

      - name: Build and push Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          push: true
          tags: |
            \${{ env.IMAGE_NAME }}:\${GITHUB_SHA:0:7}
            \${{ env.IMAGE_NAME }}:latest
          cache-from: type=registry,ref=\${{ env.IMAGE_NAME }}:latest
          cache-to: type=inline

      - name: Deploy to server
        env:
          SSH_HOST: \${{ secrets.SSH_HOST }}
          SSH_USER: \${{ secrets.SSH_USER }}
          SSH_PRIVATE_KEY: \${{ secrets.SSH_PRIVATE_KEY }}
          SSH_KNOWN_HOSTS: \${{ secrets.SSH_KNOWN_HOSTS }}
          IMAGE_TAG: \${GITHUB_SHA:0:7}
        run: |
          # Configurar SSH con host key verification
          echo "$SSH_PRIVATE_KEY" > deploy_key
          chmod 600 deploy_key
          
          mkdir -p ~/.ssh
          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
          chmod 644 ~/.ssh/known_hosts
          
          # Deploy al servidor (IMAGE_TAG ya está en env)
          ssh -o StrictHostKeyChecking=yes -i deploy_key $SSH_USER@$SSH_HOST << ENDSSH
            set -e
            
            cd /var/www/myapi
            
            # Leer estado del servidor para obtener tag anterior para rollback
            STATE_FILE="/etc/fractal/state.json"
            PREVIOUS_TAG=""
            if [ -f "$STATE_FILE" ]; then
              # Usar jq si está disponible, sino python con json.load (robusto contra pretty-print)
              if command -v jq &> /dev/null; then
                PREVIOUS_TAG=$(sudo cat $STATE_FILE | jq -r '.lastSuccessfulImageTag // ""')
              else
                PREVIOUS_TAG=$(sudo cat $STATE_FILE | python3 -c "import sys, json; print(json.load(sys.stdin).get('lastSuccessfulImageTag', ''))")
              fi
              echo "Previous successful tag: $PREVIOUS_TAG"
            fi
            
            # Actualizar compose con nueva imagen
            export IMAGE_TAG=$IMAGE_TAG
            docker compose pull
            docker compose up -d --no-build
            
            # Esperar que los contenedores estén listos
            sleep 10
            
            # Ejecutar migraciones
            docker compose exec -T app php artisan migrate --force
            
            # Limpiar caches
            docker compose exec -T app php artisan config:clear
            docker compose exec -T app php artisan route:clear
            docker compose exec -T app php artisan view:clear
            docker compose exec -T app php artisan cache:clear
            
            # Healthcheck
            HEALTH_URL="https://api.example.com/health"
            echo "Checking health at $HEALTH_URL"
            
            HEALTHCHECK_PASSED=false
            for i in {1..30}; do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Healthcheck passed"
                HEALTHCHECK_PASSED=true
                break
              fi
              echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
            
            # Registrar el deploy en el estado del servidor
            TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
            if [ "$HEALTHCHECK_PASSED" = true ]; then
              # Deploy exitoso - actualizar estado
              sudo mkdir -p $(dirname $STATE_FILE)
              if [ -f "$STATE_FILE" ]; then
                # Leer estado actual
                CURRENT_STATE=$(sudo cat $STATE_FILE)
              else
                # Crear estado inicial
                CURRENT_STATE='{"version":"1.0.0","createdAt":"'$TIMESTAMP'","provisioning":{},"deployHistory":[]}'
              fi
              
              # Agregar entrada al historial
              NEW_ENTRY='{"imageTag":"'$IMAGE_TAG'","timestamp":"'$TIMESTAMP'","healthcheck":"passed","commitSha":"'\${GITHUB_SHA}'","branch":"'\${GITHUB_REF_NAME}'"}'
              UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['currentImageTag'] = '$IMAGE_TAG'
state['lastSuccessfulImageTag'] = '$IMAGE_TAG'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
              echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
              echo "✓ Deploy state updated"
              exit 0
            else
              echo "✗ Healthcheck failed after 30 attempts"
              
              # Registrar deploy fallido en el estado
              if [ -f "$STATE_FILE" ]; then
                CURRENT_STATE=$(sudo cat $STATE_FILE)
                NEW_ENTRY='{"imageTag":"'$IMAGE_TAG'","timestamp":"'$TIMESTAMP'","healthcheck":"failed","commitSha":"'\${GITHUB_SHA}'","branch":"'\${GITHUB_REF_NAME}'"}'
                UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
                echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
              fi
              
              # Rollback a la imagen anterior (AC-10: usar tag versionado, no contenedor previo)
              if [ -n "$PREVIOUS_TAG" ]; then
                echo "Rolling back to previous successful tag: $PREVIOUS_TAG"
                export IMAGE_TAG=$PREVIOUS_TAG
                
                # Asegurar que la imagen anterior esté disponible
                docker compose pull || echo "⚠ Pull failed, using local image"
                
                docker compose up -d
                echo "✓ Rolled back to $PREVIOUS_TAG"
                
                # Post-rollback healthcheck
                echo "Verifying rollback with healthcheck..."
                sleep 5
                for i in {1..10}; do
                  HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
                  if [ "$HTTP_CODE" = "200" ]; then
                    echo "✓ Post-rollback healthcheck passed"
                    break
                  fi
                  echo "Post-rollback attempt $i/10: HTTP $HTTP_CODE, retrying..."
                  sleep 2
                done
              else
                echo "⚠ No previous successful tag found for rollback"
              fi
              
              exit 1
            fi
ENDSSH
          
          rm -f deploy_key

      - name: Notify deployment status
        if: always()
        run: |
          if [ \${{ job.status }} == 'success' ]; then
            echo "✓ Deploy exitoso a https://api.example.com"
          else
            echo "✗ Deploy falló, ver logs arriba"
          fi
"
`;

exports[`Workflow Snapshots > GitHub Actions > should generate consistent workflow for multirepo web 1`] = `
"# Workflow de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myweb
# Target: frontend-static

name: Deploy to Production

on:
  push:
    branches:
      - main

env:
  PROJECT_NAME: myweb
  DOMAIN: app.example.com
  IMAGE_NAME: ghcr.io/\${{ github.repository }}/myweb

jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    timeout-minutes: 10
    
    steps:
      - name: Checkout code
        uses: actions/checkout@v4

      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3

      - name: Log in to GitHub Container Registry
        uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ secrets.DOCKER_REGISTRY_USER }}
          password: \${{ secrets.DOCKER_REGISTRY_TOKEN }}

      - name: Build and push Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          push: true
          tags: |
            \${{ env.IMAGE_NAME }}:\${GITHUB_SHA:0:7}
            \${{ env.IMAGE_NAME }}:latest
          cache-from: type=registry,ref=\${{ env.IMAGE_NAME }}:latest
          cache-to: type=inline

      - name: Deploy to server
        env:
          SSH_HOST: \${{ secrets.SSH_HOST }}
          SSH_USER: \${{ secrets.SSH_USER }}
          SSH_PRIVATE_KEY: \${{ secrets.SSH_PRIVATE_KEY }}
          SSH_KNOWN_HOSTS: \${{ secrets.SSH_KNOWN_HOSTS }}
          IMAGE_TAG: \${GITHUB_SHA:0:7}
        run: |
          # Configurar SSH con host key verification
          echo "$SSH_PRIVATE_KEY" > deploy_key
          chmod 600 deploy_key
          
          mkdir -p ~/.ssh
          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
          chmod 644 ~/.ssh/known_hosts
          
          # Deploy al servidor (IMAGE_TAG ya está en env)
          ssh -o StrictHostKeyChecking=yes -i deploy_key $SSH_USER@$SSH_HOST << ENDSSH
            set -e
            
            cd /var/www/myweb
            
            # Leer estado del servidor para obtener tag anterior para rollback
            STATE_FILE="/etc/fractal/state.json"
            PREVIOUS_TAG=""
            if [ -f "$STATE_FILE" ]; then
              # Usar jq si está disponible, sino python con json.load (robusto contra pretty-print)
              if command -v jq &> /dev/null; then
                PREVIOUS_TAG=$(sudo cat $STATE_FILE | jq -r '.lastSuccessfulImageTag // ""')
              else
                PREVIOUS_TAG=$(sudo cat $STATE_FILE | python3 -c "import sys, json; print(json.load(sys.stdin).get('lastSuccessfulImageTag', ''))")
              fi
              echo "Previous successful tag: $PREVIOUS_TAG"
            fi
            
            # Actualizar compose con nueva imagen
            export IMAGE_TAG=$IMAGE_TAG
            docker compose pull
            docker compose up -d --no-build
            
            # Esperar que los contenedores estén listos
            sleep 10
            
            # Healthcheck
            HEALTH_URL="https://app.example.com/"
            echo "Checking health at $HEALTH_URL"
            
            HEALTHCHECK_PASSED=false
            for i in {1..30}; do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Healthcheck passed"
                HEALTHCHECK_PASSED=true
                break
              fi
              echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
            
            # Registrar el deploy en el estado del servidor
            TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
            if [ "$HEALTHCHECK_PASSED" = true ]; then
              # Deploy exitoso - actualizar estado
              sudo mkdir -p $(dirname $STATE_FILE)
              if [ -f "$STATE_FILE" ]; then
                # Leer estado actual
                CURRENT_STATE=$(sudo cat $STATE_FILE)
              else
                # Crear estado inicial
                CURRENT_STATE='{"version":"1.0.0","createdAt":"'$TIMESTAMP'","provisioning":{},"deployHistory":[]}'
              fi
              
              # Agregar entrada al historial
              NEW_ENTRY='{"imageTag":"'$IMAGE_TAG'","timestamp":"'$TIMESTAMP'","healthcheck":"passed","commitSha":"'\${GITHUB_SHA}'","branch":"'\${GITHUB_REF_NAME}'"}'
              UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['currentImageTag'] = '$IMAGE_TAG'
state['lastSuccessfulImageTag'] = '$IMAGE_TAG'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
              echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
              echo "✓ Deploy state updated"
              exit 0
            else
              echo "✗ Healthcheck failed after 30 attempts"
              
              # Registrar deploy fallido en el estado
              if [ -f "$STATE_FILE" ]; then
                CURRENT_STATE=$(sudo cat $STATE_FILE)
                NEW_ENTRY='{"imageTag":"'$IMAGE_TAG'","timestamp":"'$TIMESTAMP'","healthcheck":"failed","commitSha":"'\${GITHUB_SHA}'","branch":"'\${GITHUB_REF_NAME}'"}'
                UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
                echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
              fi
              
              # Rollback a la imagen anterior (AC-10: usar tag versionado, no contenedor previo)
              if [ -n "$PREVIOUS_TAG" ]; then
                echo "Rolling back to previous successful tag: $PREVIOUS_TAG"
                export IMAGE_TAG=$PREVIOUS_TAG
                
                # Asegurar que la imagen anterior esté disponible
                docker compose pull || echo "⚠ Pull failed, using local image"
                
                docker compose up -d
                echo "✓ Rolled back to $PREVIOUS_TAG"
                
                # Post-rollback healthcheck
                echo "Verifying rollback with healthcheck..."
                sleep 5
                for i in {1..10}; do
                  HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
                  if [ "$HTTP_CODE" = "200" ]; then
                    echo "✓ Post-rollback healthcheck passed"
                    break
                  fi
                  echo "Post-rollback attempt $i/10: HTTP $HTTP_CODE, retrying..."
                  sleep 2
                done
              else
                echo "⚠ No previous successful tag found for rollback"
              fi
              
              exit 1
            fi
ENDSSH
          
          rm -f deploy_key

      - name: Notify deployment status
        if: always()
        run: |
          if [ \${{ job.status }} == 'success' ]; then
            echo "✓ Deploy exitoso a https://app.example.com"
          else
            echo "✗ Deploy falló, ver logs arriba"
          fi
"
`;

exports[`Workflow Snapshots > GitLab CI > should generate consistent pipeline for backend-full 1`] = `
"# Pipeline de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myapi
# Target: backend-full

variables:
  PROJECT_NAME: myapi
  DOMAIN: api.example.com
  IMAGE_NAME: $CI_REGISTRY_IMAGE/myapi
  DOCKER_DRIVER: overlay2

stages:
  - build
  - deploy

build:
  stage: build
  image: docker:24
  services:
    - docker:24-dind
  only:
    - production
  before_script:
    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN $CI_REGISTRY
  script:
    - docker build -t $IMAGE_NAME:$CI_COMMIT_SHORT_SHA -t $IMAGE_NAME:latest .
    - docker push $IMAGE_NAME:$CI_COMMIT_SHORT_SHA
    - docker push $IMAGE_NAME:latest

deploy:
  stage: deploy
  image: alpine:latest
  only:
    - production
  timeout: 10 minutes
  before_script:
    - apk add --no-cache openssh-client curl
    - eval $(ssh-agent -s)
    - echo "$SSH_PRIVATE_KEY" | tr -d '\\r' | ssh-add -
    - mkdir -p ~/.ssh
    - chmod 700 ~/.ssh
    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
    - chmod 644 ~/.ssh/known_hosts
  script:
    - |
      ssh -o StrictHostKeyChecking=yes $SSH_USER@$SSH_HOST << ENDSSH
        set -e
        
        cd /var/www/myapi
        
        # Leer estado del servidor para obtener tag anterior para rollback
        STATE_FILE="/etc/fractal/state.json"
        PREVIOUS_TAG=""
        if [ -f "$STATE_FILE" ]; then
          # Usar jq si está disponible, sino python con json.load (robusto contra pretty-print)
          if command -v jq &> /dev/null; then
            PREVIOUS_TAG=$(sudo cat $STATE_FILE | jq -r '.lastSuccessfulImageTag // ""')
          else
            PREVIOUS_TAG=$(sudo cat $STATE_FILE | python3 -c "import sys, json; print(json.load(sys.stdin).get('lastSuccessfulImageTag', ''))")
          fi
          echo "Previous successful tag: $PREVIOUS_TAG"
        fi
        
        # Actualizar compose con nueva imagen (IMAGE_TAG pasa desde CI)
        export IMAGE_TAG=$CI_COMMIT_SHORT_SHA
        docker compose pull
        docker compose up -d --no-build
        
        # Esperar que los contenedores estén listos
        sleep 10
        
        # Ejecutar migraciones
        docker compose exec -T app php artisan migrate --force
        
        # Limpiar caches
        docker compose exec -T app php artisan config:clear
        docker compose exec -T app php artisan route:clear
        docker compose exec -T app php artisan view:clear
        docker compose exec -T app php artisan cache:clear
        
        # Healthcheck
        HEALTH_URL="https://api.example.com/health"
        echo "Checking health at $HEALTH_URL"
        
        HEALTHCHECK_PASSED=false
        for i in $(seq 1 30); do
          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
          if [ "$HTTP_CODE" = "200" ]; then
            echo "✓ Healthcheck passed"
            HEALTHCHECK_PASSED=true
            break
          fi
          echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
          sleep 2
        done
        
        # Registrar el deploy en el estado del servidor
        TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
        if [ "$HEALTHCHECK_PASSED" = true ]; then
          # Deploy exitoso - actualizar estado
          sudo mkdir -p $(dirname $STATE_FILE)
          if [ -f "$STATE_FILE" ]; then
            # Leer estado actual
            CURRENT_STATE=$(sudo cat $STATE_FILE)
          else
            # Crear estado inicial
            CURRENT_STATE='{"version":"1.0.0","createdAt":"'$TIMESTAMP'","provisioning":{},"deployHistory":[]}'
          fi
          
          # Agregar entrada al historial
          NEW_ENTRY='{"imageTag":"$CI_COMMIT_SHORT_SHA","timestamp":"'$TIMESTAMP'","healthcheck":"passed","commitSha":"$CI_COMMIT_SHA","branch":"$CI_COMMIT_REF_NAME"}'
          UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['currentImageTag'] = '$CI_COMMIT_SHORT_SHA'
state['lastSuccessfulImageTag'] = '$CI_COMMIT_SHORT_SHA'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
          echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
          echo "✓ Deploy state updated"
          exit 0
        else
          echo "✗ Healthcheck failed after 30 attempts"
          
          # Registrar deploy fallido en el estado
          if [ -f "$STATE_FILE" ]; then
            CURRENT_STATE=$(sudo cat $STATE_FILE)
            NEW_ENTRY='{"imageTag":"$CI_COMMIT_SHORT_SHA","timestamp":"'$TIMESTAMP'","healthcheck":"failed","commitSha":"$CI_COMMIT_SHA","branch":"$CI_COMMIT_REF_NAME"}'
            UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
            echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
          fi
          
          # Rollback a la imagen anterior (AC-10: usar tag versionado, no contenedor previo)
          if [ -n "$PREVIOUS_TAG" ]; then
            echo "Rolling back to previous successful tag: $PREVIOUS_TAG"
            export IMAGE_TAG=$PREVIOUS_TAG
            
            # Asegurar que la imagen anterior esté disponible
            docker compose pull || echo "⚠ Pull failed, using local image"
            
            docker compose up -d
            echo "✓ Rolled back to $PREVIOUS_TAG"
            
            # Post-rollback healthcheck
            echo "Verifying rollback with healthcheck..."
            sleep 5
            for i in $(seq 1 10); do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Post-rollback healthcheck passed"
                break
              fi
              echo "Post-rollback attempt $i/10: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
          else
            echo "⚠ No previous successful tag found for rollback"
          fi
          
          exit 1
        fi
ENDSSH
  after_script:
    - |
      if [ $CI_JOB_STATUS == 'success' ]; then
        echo "✓ Deploy exitoso a https://api.example.com"
      else
        echo "✗ Deploy falló, ver logs arriba"
      fi
"
`;

exports[`Workflow Snapshots > GitLab CI > should generate consistent pipeline for frontend-static 1`] = `
"# Pipeline de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myweb
# Target: frontend-static

variables:
  PROJECT_NAME: myweb
  DOMAIN: app.example.com
  IMAGE_NAME: $CI_REGISTRY_IMAGE/myweb
  DOCKER_DRIVER: overlay2

stages:
  - build
  - deploy

build:
  stage: build
  image: docker:24
  services:
    - docker:24-dind
  only:
    - main
  before_script:
    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN $CI_REGISTRY
  script:
    - docker build -t $IMAGE_NAME:$CI_COMMIT_SHORT_SHA -t $IMAGE_NAME:latest .
    - docker push $IMAGE_NAME:$CI_COMMIT_SHORT_SHA
    - docker push $IMAGE_NAME:latest

deploy:
  stage: deploy
  image: alpine:latest
  only:
    - main
  timeout: 10 minutes
  before_script:
    - apk add --no-cache openssh-client curl
    - eval $(ssh-agent -s)
    - echo "$SSH_PRIVATE_KEY" | tr -d '\\r' | ssh-add -
    - mkdir -p ~/.ssh
    - chmod 700 ~/.ssh
    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
    - chmod 644 ~/.ssh/known_hosts
  script:
    - |
      ssh -o StrictHostKeyChecking=yes $SSH_USER@$SSH_HOST << ENDSSH
        set -e
        
        cd /var/www/myweb
        
        # Leer estado del servidor para obtener tag anterior para rollback
        STATE_FILE="/etc/fractal/state.json"
        PREVIOUS_TAG=""
        if [ -f "$STATE_FILE" ]; then
          # Usar jq si está disponible, sino python con json.load (robusto contra pretty-print)
          if command -v jq &> /dev/null; then
            PREVIOUS_TAG=$(sudo cat $STATE_FILE | jq -r '.lastSuccessfulImageTag // ""')
          else
            PREVIOUS_TAG=$(sudo cat $STATE_FILE | python3 -c "import sys, json; print(json.load(sys.stdin).get('lastSuccessfulImageTag', ''))")
          fi
          echo "Previous successful tag: $PREVIOUS_TAG"
        fi
        
        # Actualizar compose con nueva imagen (IMAGE_TAG pasa desde CI)
        export IMAGE_TAG=$CI_COMMIT_SHORT_SHA
        docker compose pull
        docker compose up -d --no-build
        
        # Esperar que los contenedores estén listos
        sleep 10
        
        # Healthcheck
        HEALTH_URL="https://app.example.com/"
        echo "Checking health at $HEALTH_URL"
        
        HEALTHCHECK_PASSED=false
        for i in $(seq 1 30); do
          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
          if [ "$HTTP_CODE" = "200" ]; then
            echo "✓ Healthcheck passed"
            HEALTHCHECK_PASSED=true
            break
          fi
          echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
          sleep 2
        done
        
        # Registrar el deploy en el estado del servidor
        TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
        if [ "$HEALTHCHECK_PASSED" = true ]; then
          # Deploy exitoso - actualizar estado
          sudo mkdir -p $(dirname $STATE_FILE)
          if [ -f "$STATE_FILE" ]; then
            # Leer estado actual
            CURRENT_STATE=$(sudo cat $STATE_FILE)
          else
            # Crear estado inicial
            CURRENT_STATE='{"version":"1.0.0","createdAt":"'$TIMESTAMP'","provisioning":{},"deployHistory":[]}'
          fi
          
          # Agregar entrada al historial
          NEW_ENTRY='{"imageTag":"$CI_COMMIT_SHORT_SHA","timestamp":"'$TIMESTAMP'","healthcheck":"passed","commitSha":"$CI_COMMIT_SHA","branch":"$CI_COMMIT_REF_NAME"}'
          UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['currentImageTag'] = '$CI_COMMIT_SHORT_SHA'
state['lastSuccessfulImageTag'] = '$CI_COMMIT_SHORT_SHA'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
          echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
          echo "✓ Deploy state updated"
          exit 0
        else
          echo "✗ Healthcheck failed after 30 attempts"
          
          # Registrar deploy fallido en el estado
          if [ -f "$STATE_FILE" ]; then
            CURRENT_STATE=$(sudo cat $STATE_FILE)
            NEW_ENTRY='{"imageTag":"$CI_COMMIT_SHORT_SHA","timestamp":"'$TIMESTAMP'","healthcheck":"failed","commitSha":"$CI_COMMIT_SHA","branch":"$CI_COMMIT_REF_NAME"}'
            UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
            echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
          fi
          
          # Rollback a la imagen anterior (AC-10: usar tag versionado, no contenedor previo)
          if [ -n "$PREVIOUS_TAG" ]; then
            echo "Rolling back to previous successful tag: $PREVIOUS_TAG"
            export IMAGE_TAG=$PREVIOUS_TAG
            
            # Asegurar que la imagen anterior esté disponible
            docker compose pull || echo "⚠ Pull failed, using local image"
            
            docker compose up -d
            echo "✓ Rolled back to $PREVIOUS_TAG"
            
            # Post-rollback healthcheck
            echo "Verifying rollback with healthcheck..."
            sleep 5
            for i in $(seq 1 10); do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Post-rollback healthcheck passed"
                break
              fi
              echo "Post-rollback attempt $i/10: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
          else
            echo "⚠ No previous successful tag found for rollback"
          fi
          
          exit 1
        fi
ENDSSH
  after_script:
    - |
      if [ $CI_JOB_STATUS == 'success' ]; then
        echo "✓ Deploy exitoso a https://app.example.com"
      else
        echo "✗ Deploy falló, ver logs arriba"
      fi
"
`;

exports[`Workflow Snapshots > GitLab CI > should generate consistent pipeline for multirepo api 1`] = `
"# Pipeline de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myapi
# Target: backend-full

variables:
  PROJECT_NAME: myapi
  DOMAIN: api.example.com
  IMAGE_NAME: $CI_REGISTRY_IMAGE/myapi
  DOCKER_DRIVER: overlay2

stages:
  - build
  - deploy

build:
  stage: build
  image: docker:24
  services:
    - docker:24-dind
  only:
    - production
  before_script:
    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN $CI_REGISTRY
  script:
    - docker build -t $IMAGE_NAME:$CI_COMMIT_SHORT_SHA -t $IMAGE_NAME:latest .
    - docker push $IMAGE_NAME:$CI_COMMIT_SHORT_SHA
    - docker push $IMAGE_NAME:latest

deploy:
  stage: deploy
  image: alpine:latest
  only:
    - production
  timeout: 10 minutes
  before_script:
    - apk add --no-cache openssh-client curl
    - eval $(ssh-agent -s)
    - echo "$SSH_PRIVATE_KEY" | tr -d '\\r' | ssh-add -
    - mkdir -p ~/.ssh
    - chmod 700 ~/.ssh
    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
    - chmod 644 ~/.ssh/known_hosts
  script:
    - |
      ssh -o StrictHostKeyChecking=yes $SSH_USER@$SSH_HOST << ENDSSH
        set -e
        
        cd /var/www/myapi
        
        # Leer estado del servidor para obtener tag anterior para rollback
        STATE_FILE="/etc/fractal/state.json"
        PREVIOUS_TAG=""
        if [ -f "$STATE_FILE" ]; then
          # Usar jq si está disponible, sino python con json.load (robusto contra pretty-print)
          if command -v jq &> /dev/null; then
            PREVIOUS_TAG=$(sudo cat $STATE_FILE | jq -r '.lastSuccessfulImageTag // ""')
          else
            PREVIOUS_TAG=$(sudo cat $STATE_FILE | python3 -c "import sys, json; print(json.load(sys.stdin).get('lastSuccessfulImageTag', ''))")
          fi
          echo "Previous successful tag: $PREVIOUS_TAG"
        fi
        
        # Actualizar compose con nueva imagen (IMAGE_TAG pasa desde CI)
        export IMAGE_TAG=$CI_COMMIT_SHORT_SHA
        docker compose pull
        docker compose up -d --no-build
        
        # Esperar que los contenedores estén listos
        sleep 10
        
        # Ejecutar migraciones
        docker compose exec -T app php artisan migrate --force
        
        # Limpiar caches
        docker compose exec -T app php artisan config:clear
        docker compose exec -T app php artisan route:clear
        docker compose exec -T app php artisan view:clear
        docker compose exec -T app php artisan cache:clear
        
        # Healthcheck
        HEALTH_URL="https://api.example.com/health"
        echo "Checking health at $HEALTH_URL"
        
        HEALTHCHECK_PASSED=false
        for i in $(seq 1 30); do
          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
          if [ "$HTTP_CODE" = "200" ]; then
            echo "✓ Healthcheck passed"
            HEALTHCHECK_PASSED=true
            break
          fi
          echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
          sleep 2
        done
        
        # Registrar el deploy en el estado del servidor
        TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
        if [ "$HEALTHCHECK_PASSED" = true ]; then
          # Deploy exitoso - actualizar estado
          sudo mkdir -p $(dirname $STATE_FILE)
          if [ -f "$STATE_FILE" ]; then
            # Leer estado actual
            CURRENT_STATE=$(sudo cat $STATE_FILE)
          else
            # Crear estado inicial
            CURRENT_STATE='{"version":"1.0.0","createdAt":"'$TIMESTAMP'","provisioning":{},"deployHistory":[]}'
          fi
          
          # Agregar entrada al historial
          NEW_ENTRY='{"imageTag":"$CI_COMMIT_SHORT_SHA","timestamp":"'$TIMESTAMP'","healthcheck":"passed","commitSha":"$CI_COMMIT_SHA","branch":"$CI_COMMIT_REF_NAME"}'
          UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['currentImageTag'] = '$CI_COMMIT_SHORT_SHA'
state['lastSuccessfulImageTag'] = '$CI_COMMIT_SHORT_SHA'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
          echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
          echo "✓ Deploy state updated"
          exit 0
        else
          echo "✗ Healthcheck failed after 30 attempts"
          
          # Registrar deploy fallido en el estado
          if [ -f "$STATE_FILE" ]; then
            CURRENT_STATE=$(sudo cat $STATE_FILE)
            NEW_ENTRY='{"imageTag":"$CI_COMMIT_SHORT_SHA","timestamp":"'$TIMESTAMP'","healthcheck":"failed","commitSha":"$CI_COMMIT_SHA","branch":"$CI_COMMIT_REF_NAME"}'
            UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
            echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
          fi
          
          # Rollback a la imagen anterior (AC-10: usar tag versionado, no contenedor previo)
          if [ -n "$PREVIOUS_TAG" ]; then
            echo "Rolling back to previous successful tag: $PREVIOUS_TAG"
            export IMAGE_TAG=$PREVIOUS_TAG
            
            # Asegurar que la imagen anterior esté disponible
            docker compose pull || echo "⚠ Pull failed, using local image"
            
            docker compose up -d
            echo "✓ Rolled back to $PREVIOUS_TAG"
            
            # Post-rollback healthcheck
            echo "Verifying rollback with healthcheck..."
            sleep 5
            for i in $(seq 1 10); do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Post-rollback healthcheck passed"
                break
              fi
              echo "Post-rollback attempt $i/10: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
          else
            echo "⚠ No previous successful tag found for rollback"
          fi
          
          exit 1
        fi
ENDSSH
  after_script:
    - |
      if [ $CI_JOB_STATUS == 'success' ]; then
        echo "✓ Deploy exitoso a https://api.example.com"
      else
        echo "✗ Deploy falló, ver logs arriba"
      fi
"
`;

exports[`Workflow Snapshots > GitLab CI > should generate consistent pipeline for multirepo web 1`] = `
"# Pipeline de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myweb
# Target: frontend-static

variables:
  PROJECT_NAME: myweb
  DOMAIN: app.example.com
  IMAGE_NAME: $CI_REGISTRY_IMAGE/myweb
  DOCKER_DRIVER: overlay2

stages:
  - build
  - deploy

build:
  stage: build
  image: docker:24
  services:
    - docker:24-dind
  only:
    - main
  before_script:
    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN $CI_REGISTRY
  script:
    - docker build -t $IMAGE_NAME:$CI_COMMIT_SHORT_SHA -t $IMAGE_NAME:latest .
    - docker push $IMAGE_NAME:$CI_COMMIT_SHORT_SHA
    - docker push $IMAGE_NAME:latest

deploy:
  stage: deploy
  image: alpine:latest
  only:
    - main
  timeout: 10 minutes
  before_script:
    - apk add --no-cache openssh-client curl
    - eval $(ssh-agent -s)
    - echo "$SSH_PRIVATE_KEY" | tr -d '\\r' | ssh-add -
    - mkdir -p ~/.ssh
    - chmod 700 ~/.ssh
    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
    - chmod 644 ~/.ssh/known_hosts
  script:
    - |
      ssh -o StrictHostKeyChecking=yes $SSH_USER@$SSH_HOST << ENDSSH
        set -e
        
        cd /var/www/myweb
        
        # Leer estado del servidor para obtener tag anterior para rollback
        STATE_FILE="/etc/fractal/state.json"
        PREVIOUS_TAG=""
        if [ -f "$STATE_FILE" ]; then
          # Usar jq si está disponible, sino python con json.load (robusto contra pretty-print)
          if command -v jq &> /dev/null; then
            PREVIOUS_TAG=$(sudo cat $STATE_FILE | jq -r '.lastSuccessfulImageTag // ""')
          else
            PREVIOUS_TAG=$(sudo cat $STATE_FILE | python3 -c "import sys, json; print(json.load(sys.stdin).get('lastSuccessfulImageTag', ''))")
          fi
          echo "Previous successful tag: $PREVIOUS_TAG"
        fi
        
        # Actualizar compose con nueva imagen (IMAGE_TAG pasa desde CI)
        export IMAGE_TAG=$CI_COMMIT_SHORT_SHA
        docker compose pull
        docker compose up -d --no-build
        
        # Esperar que los contenedores estén listos
        sleep 10
        
        # Healthcheck
        HEALTH_URL="https://app.example.com/"
        echo "Checking health at $HEALTH_URL"
        
        HEALTHCHECK_PASSED=false
        for i in $(seq 1 30); do
          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
          if [ "$HTTP_CODE" = "200" ]; then
            echo "✓ Healthcheck passed"
            HEALTHCHECK_PASSED=true
            break
          fi
          echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
          sleep 2
        done
        
        # Registrar el deploy en el estado del servidor
        TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%S.000Z")
        if [ "$HEALTHCHECK_PASSED" = true ]; then
          # Deploy exitoso - actualizar estado
          sudo mkdir -p $(dirname $STATE_FILE)
          if [ -f "$STATE_FILE" ]; then
            # Leer estado actual
            CURRENT_STATE=$(sudo cat $STATE_FILE)
          else
            # Crear estado inicial
            CURRENT_STATE='{"version":"1.0.0","createdAt":"'$TIMESTAMP'","provisioning":{},"deployHistory":[]}'
          fi
          
          # Agregar entrada al historial
          NEW_ENTRY='{"imageTag":"$CI_COMMIT_SHORT_SHA","timestamp":"'$TIMESTAMP'","healthcheck":"passed","commitSha":"$CI_COMMIT_SHA","branch":"$CI_COMMIT_REF_NAME"}'
          UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['currentImageTag'] = '$CI_COMMIT_SHORT_SHA'
state['lastSuccessfulImageTag'] = '$CI_COMMIT_SHORT_SHA'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
          echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
          echo "✓ Deploy state updated"
          exit 0
        else
          echo "✗ Healthcheck failed after 30 attempts"
          
          # Registrar deploy fallido en el estado
          if [ -f "$STATE_FILE" ]; then
            CURRENT_STATE=$(sudo cat $STATE_FILE)
            NEW_ENTRY='{"imageTag":"$CI_COMMIT_SHORT_SHA","timestamp":"'$TIMESTAMP'","healthcheck":"failed","commitSha":"$CI_COMMIT_SHA","branch":"$CI_COMMIT_REF_NAME"}'
            UPDATED_STATE=$(echo "$CURRENT_STATE" | python3 -c "
import sys, json
state = json.load(sys.stdin)
state['updatedAt'] = '$TIMESTAMP'
state['deployHistory'].insert(0, $NEW_ENTRY)
state['deployHistory'] = state['deployHistory'][:10]
print(json.dumps(state, indent=2))
")
            echo "$UPDATED_STATE" | sudo tee $STATE_FILE > /dev/null
          fi
          
          # Rollback a la imagen anterior (AC-10: usar tag versionado, no contenedor previo)
          if [ -n "$PREVIOUS_TAG" ]; then
            echo "Rolling back to previous successful tag: $PREVIOUS_TAG"
            export IMAGE_TAG=$PREVIOUS_TAG
            
            # Asegurar que la imagen anterior esté disponible
            docker compose pull || echo "⚠ Pull failed, using local image"
            
            docker compose up -d
            echo "✓ Rolled back to $PREVIOUS_TAG"
            
            # Post-rollback healthcheck
            echo "Verifying rollback with healthcheck..."
            sleep 5
            for i in $(seq 1 10); do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Post-rollback healthcheck passed"
                break
              fi
              echo "Post-rollback attempt $i/10: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
          else
            echo "⚠ No previous successful tag found for rollback"
          fi
          
          exit 1
        fi
ENDSSH
  after_script:
    - |
      if [ $CI_JOB_STATUS == 'success' ]; then
        echo "✓ Deploy exitoso a https://app.example.com"
      else
        echo "✗ Deploy falló, ver logs arriba"
      fi
"
`;
